@@ -1,6 +1,8 @@
 Release 0.6.4 (in development)
 ==============================
 
+* #295: Fix escaping of hyperref targets in LaTeX output.
+
 * #302: Fix links generated by the ``:doc:`` role for LaTeX output.
 
 * #286: collect todo nodes after the whole document has been read;
